--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,5 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+ArduinoJson-5.13.4/
+ArduinoJson-*/
