--- a/LocalDebugger/WinDebugger/WinDebugger/WinDebugger.vcxproj.filters
+++ b/LocalDebugger/WinDebugger/WinDebugger/WinDebugger.vcxproj.filters
@@ -47,5 +47,11 @@
     <ClCompile Include="bridge_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\ObisElement.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\han.ino" />
   </ItemGroup>
 </Project>
