Moved the dlms/obis datatypes into their own compilation unit. Now also with their own header.

--- a/LocalDebugger/WinDebugger/WinDebugger/WinDebugger.vcxproj
+++ b/LocalDebugger/WinDebugger/WinDebugger/WinDebugger.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="..\..\..\Crc16.h" />
     <ClInclude Include="..\..\..\DlmsReader.h" />
     <ClInclude Include="..\..\..\HanReader.h" />
+    <ClInclude Include="..\..\..\ObisElement.h" />
     <ClInclude Include="..\..\..\WProgram.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
