--- a/LocalDebugger/WinDebugger/WinDebugger/WinDebugger.vcxproj.filters
+++ b/LocalDebugger/WinDebugger/WinDebugger/WinDebugger.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\..\..\WProgram.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\ObisElement.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Crc16.cpp">
